// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Avatar component renders correctly 1`] = `
<View
  style={
    Array [
      Object {
        "borderRadius": 8,
        "height": 64,
        "width": 64,
      },
      undefined,
    ]
  }
  testID="avatar"
>
  <View
    style={
      Array [
        Object {
          "borderRadius": 8,
          "height": 64,
          "width": 64,
        },
        Object {},
      ]
    }
    testID="avatar_container"
  >
    <View
      style={
        Array [
          Object {
            "overflow": "hidden",
          },
          Array [
            Object {
              "borderRadius": 8,
              "height": 64,
              "width": 64,
            },
            Object {
              "borderColor": "#F2F5F8",
              "borderWidth": 2,
            },
            Object {
              "backgroundColor": "#FFFFFF",
            },
          ],
        ]
      }
    >
      <FastImageView
        onFastImageError={[Function]}
        resizeMode="cover"
        source={
          Object {
            "testUri": "../../../assets/images/bein_logo.png",
          }
        }
        style={
          Object {
            "bottom": 0,
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          }
        }
        testID="avatar.image"
      />
    </View>
  </View>
</View>
`;

exports[`Avatar component renders correctly badge 1`] = `
<View
  style={
    Array [
      Object {
        "borderRadius": 8,
        "height": 64,
        "width": 64,
      },
      undefined,
    ]
  }
  testID="avatar"
>
  <View
    style={
      Array [
        Object {
          "borderRadius": 8,
          "height": 64,
          "width": 64,
        },
        Object {},
      ]
    }
    testID="avatar_container"
  >
    <View
      style={
        Array [
          Object {
            "overflow": "hidden",
          },
          Array [
            Object {
              "borderRadius": 8,
              "height": 64,
              "width": 64,
            },
            Object {
              "borderColor": "#F2F5F8",
              "borderWidth": 2,
            },
            Object {
              "backgroundColor": "#FFFFFF",
            },
          ],
        ]
      }
    >
      <FastImageView
        onFastImageError={[Function]}
        resizeMode="cover"
        source={
          Object {
            "testUri": "../../../assets/images/bein_logo.png",
          }
        }
        style={
          Object {
            "bottom": 0,
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          }
        }
        testID="avatar.image"
      />
    </View>
    <View
      accessibilityState={
        Object {
          "disabled": true,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={false}
      hitSlop={
        Object {
          "bottom": 10,
          "left": 10,
          "right": 10,
          "top": 10,
        }
      }
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "opacity": 1,
        }
      }
    >
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "flexDirection": "row",
            },
            Array [
              Object {
                "alignItems": "center",
                "borderRadius": 4,
                "justifyContent": "center",
                "padding": 2,
                "position": "absolute",
                "right": 0,
              },
              Object {
                "bottom": undefined,
                "top": 0,
              },
            ],
            Object {
              "backgroundColor": "#FFFFFF",
            },
          ]
        }
      >
        <View
          style={
            Array [
              undefined,
              undefined,
              undefined,
            ]
          }
        >
          <View
            testID="avatar.badge"
          >
            <View
              style={
                Array [
                  Object {
                    "alignItems": "center",
                    "justifyContent": "center",
                  },
                  Object {
                    "height": 18.720000000000002,
                    "width": 18.720000000000002,
                  },
                ]
              }
            >
              <Text
                style={
                  Object {
                    "fontSize": 14.040000000000003,
                    "textAlignVertical": "bottom",
                  }
                }
              />
            </View>
          </View>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`Avatar component renders correctly badge bottom 1`] = `
<View
  style={
    Array [
      Object {
        "borderRadius": 4,
        "height": 64,
        "width": 64,
      },
      undefined,
    ]
  }
  testID="avatar"
>
  <View
    style={
      Array [
        Object {
          "borderRadius": 4,
          "height": 64,
          "width": 64,
        },
        Object {},
      ]
    }
    testID="avatar_container"
  >
    <View
      onLayout={[Function]}
      style={
        Object {
          "backgroundColor": "transparent",
          "position": "relative",
        }
      }
    >
      <View
        collapsable={false}
        style={
          Object {
            "bottom": 0,
            "left": 0,
            "opacity": 1,
            "position": "absolute",
            "right": 0,
            "top": 0,
          }
        }
      >
        <View
          style={
            Object {
              "alignItems": "center",
              "backgroundColor": "#f9f9f9",
              "borderColor": "#F2F5F8",
              "borderRadius": 4,
              "borderWidth": 2,
              "height": 64,
              "justifyContent": "center",
              "width": 64,
            }
          }
          testID="Image__placeholder"
        />
      </View>
      <View
        style={
          Array [
            Object {
              "overflow": "hidden",
            },
            Object {
              "borderColor": "#F2F5F8",
              "borderRadius": 4,
              "borderWidth": 2,
              "height": 64,
              "width": 64,
            },
          ]
        }
      >
        <FastImageView
          onFastImageError={[Function]}
          onFastImageLoadEnd={[Function]}
          resizeMode="cover"
          source={
            Object {
              "testUri": "../../../assets/images/bein_logo.png",
            }
          }
          style={
            Object {
              "bottom": 0,
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            }
          }
          testID="avatar.image"
        />
      </View>
    </View>
    <View
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "#FFFFFF",
          "borderRadius": 16,
          "bottom": -4,
          "elevation": 2,
          "height": 32,
          "justifyContent": "center",
          "position": "absolute",
          "right": -8,
          "shadowColor": "#000",
          "shadowOffset": Object {
            "height": 1,
            "width": 0,
          },
          "shadowOpacity": 0.1,
          "shadowRadius": 1,
          "top": undefined,
          "width": 32,
        }
      }
      testID="avatar.badge"
    >
      <View
        accessibilityState={
          Object {
            "disabled": true,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={false}
        hitSlop={
          Object {
            "bottom": 10,
            "left": 10,
            "right": 10,
            "top": 10,
          }
        }
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "opacity": 1,
          }
        }
      >
        <View
          style={
            Array [
              Object {
                "alignItems": "center",
                "flexDirection": "row",
              },
              undefined,
              Object {
                "backgroundColor": undefined,
              },
            ]
          }
        >
          <View
            style={
              Array [
                undefined,
                undefined,
                undefined,
              ]
            }
          >
            <View>
              <View
                style={
                  Array [
                    Object {
                      "alignItems": "center",
                      "justifyContent": "center",
                    },
                    Object {
                      "height": 18.720000000000002,
                      "width": 18.720000000000002,
                    },
                  ]
                }
              >
                <Text
                  style={
                    Object {
                      "fontSize": 14.040000000000003,
                      "textAlignVertical": "bottom",
                    }
                  }
                />
              </View>
            </View>
          </View>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`Avatar component renders correctly badge check 1`] = `
<View
  style={
    Array [
      Object {
        "borderRadius": 8,
        "height": 64,
        "width": 64,
      },
      undefined,
    ]
  }
  testID="avatar"
>
  <View
    style={
      Array [
        Object {
          "borderRadius": 8,
          "height": 64,
          "width": 64,
        },
        Object {},
      ]
    }
    testID="avatar_container"
  >
    <View
      style={
        Array [
          Object {
            "overflow": "hidden",
          },
          Array [
            Object {
              "borderRadius": 8,
              "height": 64,
              "width": 64,
            },
            Object {
              "borderColor": "#F2F5F8",
              "borderWidth": 2,
            },
            Object {
              "backgroundColor": "#FFFFFF",
            },
          ],
        ]
      }
    >
      <FastImageView
        onFastImageError={[Function]}
        resizeMode="cover"
        source={
          Object {
            "testUri": "../../../assets/images/bein_logo.png",
          }
        }
        style={
          Object {
            "bottom": 0,
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          }
        }
        testID="avatar.image"
      />
    </View>
    <View
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "#13B055",
          "borderColor": "#FFFFFF",
          "borderRadius": 8,
          "borderWidth": 1,
          "bottom": 0,
          "elevation": 2,
          "height": 16,
          "justifyContent": "center",
          "position": "absolute",
          "right": 0,
          "shadowColor": "#000",
          "shadowOffset": Object {
            "height": 1,
            "width": 0,
          },
          "shadowOpacity": 0.1,
          "shadowRadius": 1,
          "width": 16,
        }
      }
      testID="avatar.badge_check"
    >
      <View
        accessibilityState={
          Object {
            "disabled": true,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={false}
        hitSlop={
          Object {
            "bottom": 10,
            "left": 10,
            "right": 10,
            "top": 10,
          }
        }
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "opacity": 1,
          }
        }
      >
        <View
          style={
            Array [
              Object {
                "alignItems": "center",
                "flexDirection": "row",
              },
              undefined,
              Object {
                "backgroundColor": undefined,
              },
            ]
          }
        >
          <View
            style={
              Array [
                undefined,
                undefined,
                undefined,
              ]
            }
          >
            <View />
          </View>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`Avatar component renders correctly status 1`] = `
<View
  style={
    Array [
      Object {
        "borderRadius": 8,
        "height": 64,
        "width": 64,
      },
      undefined,
    ]
  }
  testID="avatar"
>
  <View
    style={
      Array [
        Object {
          "borderRadius": 8,
          "height": 64,
          "width": 64,
        },
        Object {},
      ]
    }
    testID="avatar_container"
  >
    <View
      style={
        Array [
          Object {
            "overflow": "hidden",
          },
          Array [
            Object {
              "borderRadius": 8,
              "height": 64,
              "width": 64,
            },
            Object {
              "borderColor": "#F2F5F8",
              "borderWidth": 2,
            },
            Object {
              "backgroundColor": "#FFFFFF",
            },
          ],
        ]
      }
    >
      <FastImageView
        onFastImageError={[Function]}
        resizeMode="cover"
        source={
          Object {
            "testUri": "../../../assets/images/bein_logo.png",
          }
        }
        style={
          Object {
            "bottom": 0,
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          }
        }
        testID="avatar.image"
      />
    </View>
    <View
      style={
        Object {
          "backgroundColor": "#13B055",
          "borderColor": "#FFFFFF",
          "borderRadius": 10.666666666666666,
          "borderWidth": 1,
          "bottom": 0,
          "height": 21.333333333333332,
          "position": "absolute",
          "right": 0,
          "width": 21.333333333333332,
        }
      }
      testID="avatar.status"
    />
  </View>
</View>
`;

exports[`Avatar component should call props onPressAction 1`] = `
<View
  style={
    Array [
      Object {
        "borderRadius": 8,
        "height": 64,
        "width": 64,
      },
      undefined,
    ]
  }
  testID="avatar"
>
  <View
    style={
      Array [
        Object {
          "borderRadius": 8,
          "height": 64,
          "width": 64,
        },
        Object {},
      ]
    }
    testID="avatar_container"
  >
    <View
      style={
        Array [
          Object {
            "overflow": "hidden",
          },
          Array [
            Object {
              "borderRadius": 8,
              "height": 64,
              "width": 64,
            },
            Object {
              "borderColor": "#F2F5F8",
              "borderWidth": 2,
            },
            Object {
              "backgroundColor": "#FFFFFF",
            },
          ],
        ]
      }
    >
      <FastImageView
        onFastImageError={[Function]}
        resizeMode="cover"
        source={
          Object {
            "testUri": "../../../assets/images/bein_logo.png",
          }
        }
        style={
          Object {
            "bottom": 0,
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          }
        }
        testID="avatar.image"
      />
    </View>
    <View
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "#F1F2F8",
          "borderRadius": 10,
          "height": 20,
          "justifyContent": "center",
          "position": "absolute",
          "right": -4,
          "top": -4,
          "width": 20,
        }
      }
      testID="avatar.action_icon"
    >
      <View
        accessibilityState={
          Object {
            "disabled": false,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        hitSlop={
          Object {
            "bottom": 10,
            "left": 10,
            "right": 10,
            "top": 10,
          }
        }
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "opacity": 1,
          }
        }
      >
        <View
          style={
            Array [
              Object {
                "alignItems": "center",
                "flexDirection": "row",
              },
              undefined,
              Object {
                "backgroundColor": undefined,
              },
            ]
          }
        >
          <View
            style={
              Array [
                undefined,
                undefined,
                undefined,
              ]
            }
          >
            <View
              testID="avatar.action_icon.button"
            />
          </View>
        </View>
      </View>
    </View>
  </View>
</View>
`;
